[tool.poetry]
name = "bewise-music-saver"
version = "0.1.0"
description = ""
authors = ["plamer <plamer88@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.2"}
pydub = "^0.25.1"
sqlalchemy = "^2.0.15"
asyncpg = "^0.27.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
